@@ -41,6 +41,25 @@ Generating reports from unit tests:
 
 ```% mvn install site```
 
+## Examples
+
+To run an example firstly make sure you have run
+
+```% mvn install```
+
+If the project version has already been released then this is unnecessary.
+
+then you will need to set the following maven options, on Linux by
+
+```export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=512m"```
+
+and the finally run the examples by
+
+```mvn verify```
+
+You can also run individual examples by running the same command from the directory of which ever example you want to run.
+NB for this make sure you have installed examples/common.
+
 ## To build a release artifact
 
 ```% mvn install -Prelease```
